# AEGIS-OMEGA

./: .claude.json  .dockerignore  .env.example  .firebaserc  .gitguardian.yaml  .gitignore  .mcp.json  AEGIS-OMEGA.code-workspace  ASSETS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  EXECUTION_PLAN.md  GEMINI TRASH.py  GTM_ENGINEERING_SPEC.md  HANDOFF.md  HANDOFF_SCALE_OS_2026-07-18.md  INDEX.md  INDEX.yaml  INTEGRATION_LEDGER.md  LICENSE  ONBOARDING.md  README.md  REPO_MAP.md  SECURITY.md  START_HERE.md  WORKFLOW.md  adversarial_payloads.jsonl  aegis-skill-harness.patch  aegis_controller.py  build.sh  firebase.json  fix_all.py  frontier_response.json.example  frontier_router.py  init_db.py  kernel_daemon.py  kernel_one.py  local_model_client.py  (+15 more)
.aegis/: claims-ledger.json  experiment-plan.schema.json  update_automaton3_claims.py
.agent/: skills.md
.claude/: launch.json  settings.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  cognitive-manifest-trigger  labeler.yml  secret_scanning.yml
aegis-ccil-verifier/: aegis_verifier.py  canonical.js  node_verify.js  package.json  server.js  sign.py  test_cross_verify.sh
aegis-cl-psi/: Cargo.toml
aegis-cl-psi/.cargo/: config.toml
aegis-cl-psi/deploy/: Dockerfile  audit_schema.json
aegis-cl-psi/kernels/: rwkv7_step.hip
aegis-cl-psi/src/: adaptive_threshold.rs  alert_engine.rs  audit.rs  audit_certifier.rs  backpressure_monitor.rs  bandwidth_tracker.rs  capability_negotiator.rs  causal_arbiter.rs  ccil_lattice.rs  cech_descent.rs  cloud_bridge.rs  coherence_stability.rs  compaction_alert_classifier.rs  compaction_audit_certifier.rs  compaction_audit_seal.rs  compaction_broadcast_validator.rs  compaction_epoch_comparator.rs  compaction_epoch_ledger.rs  compaction_epoch_report.rs  compaction_epoch_seal.rs  compaction_gossip_audit_seal.rs  compaction_gossip_broadcast_validator.rs  compaction_gossip_capacity_planner.rs  compaction_gossip_health_aggregator.rs  compaction_gossip_peer_registry.rs  compaction_gossip_recovery_advisor.rs  compaction_gossip_trend_analyzer.rs  compaction_momentum_tracker.rs  compaction_peer_registry.rs  compaction_recovery_advisor.rs  compaction_sla_tracker.rs  compaction_sync_state.rs  compaction_telemetry_encoder.rs  compaction_trend_analyzer.rs  compliance.rs  consensus_ledger.rs  constitutional_autonode.rs  constitutional_pulse.rs  constitutional_replay.rs  convergence_certifier.rs  (+131 more)
aegis-cl-psi/tests/: integration.rs  phase7_load.rs
aegisomega-webgpu/: index.html  package-lock.json
agents/: .env.example  .gitignore  __init__.py  adaptive_lineage.json  agent_registry.json  agents.yaml  batch_bridge.py  cognitive_pipeline.py  coordinator.py  managed_agents.py  register_managed.py  register_vertex_adk.py  requirements.txt  revenue_engine.py  run.sh  tool_runner.py  tools.py
backend/: .env.local  package.json  product-service.js  product-service.test.js  server.js
cockpit/: .env.example  package-lock.json  package.json  tailwind.config.js
content-calendar/: .env.example  package-lock.json  package.json  tailwind.config.js
docs/: AEGIS_CLIENT_AUTHORITY_MODEL.md  ANTHROPIC_PARTNERSHIP_BRIEF.md  AUDIT_FINDINGS.md  CAPABILITY_WISHLIST_MAP.md  CLAIMS_LEDGER.md  (+17 more)
verifiable/cross_language/rust_rechain/: Cargo.toml
verifiable/cross_language/rust_rechain/src/: main.rs
(+743 files in other folders)
