[package]
name = "aegis_cl_psi"
version = "1.1.0"
edition = "2021"
authors = ["Tarik Skalić <tarikskalic33@gmail.com>"]
description = "AEGIS-Ω CL-Ψ: fragmentation-tolerant state-coherence routing & O(1) sequence cache"
license = "AGPL-3.0-or-later"

# EPISTEMIC TIER: T2 (engineering hypothesis)
# Constitutional root: AdaptivePower(T) ≤ ReplayVerifiability(T)
# Phase 6 mathematical correspondence claim: T3 (research conjecture, noted in module headers)

[features]
default = []
hip = []        # AMD ROCm HIP kernel integration (requires ROCm toolkit)
rocblas = []    # rocBLAS GEMM acceleration (requires ROCm toolkit)

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
byteorder = "1.5"
tracing = "0.1"

[dev-dependencies]
# No additional dev deps — all test utilities are in-crate

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
